--- a/app/src/main/res/layout/home_recycler_view.xml
+++ b/app/src/main/res/layout/home_recycler_view.xml
@@ -23,21 +23,22 @@
             <TextView
                 android:id="@+id/recycler_day_textview"
                 android:layout_width="0dp"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:layout_height="wrap_content"
-                android:text="@string/day_1"
+                android:text="Day 1"
                 android:fontFamily="@font/lato_bold"
                 android:textSize="18sp"
                 android:gravity="center_vertical"
                 android:paddingVertical="15sp"
-                android:paddingStart="20sp"/>
+                android:layout_gravity="center"
+                android:paddingStart="15sp"/>
 
             <TextView
                 android:id="@+id/recycler_date_textview"
                 android:layout_width="0dp"
-                android:layout_weight="7"
+                android:layout_weight="5.5"
                 android:layout_height="wrap_content"
-                tools:text="@string/recyclerview_home_date"
+                tools:text="2020-06-08"
                 android:fontFamily="@font/lato_regular"
                 android:textSize="16sp"
                 android:gravity="center"
@@ -46,7 +47,7 @@
             <ImageView
                 android:id="@+id/recycler_tick_imageview"
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="1.5"
                 android:layout_height="wrap_content"
                 android:paddingVertical="10sp"
                 android:layout_gravity="center"
