--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -247,7 +247,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:gravity="center"
                         android:includeFontPadding="false"
-                        android:text="@string/personal_pr"
+                        android:text="Personal Protective Equipment (PPE) &amp; Infection control "
                         android:textColor="@color/txt_sub_header_color"
                         android:textSize="13sp" />
 
@@ -260,7 +260,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:gravity="center"
                         android:includeFontPadding="false"
-                        android:text="@string/ppe_faq"
+                        android:text="PPE reuse &amp; alternatives"
                         android:textColor="@color/txt_sub_header_color"
                         android:textSize="13sp" />
 
@@ -339,6 +339,120 @@
 
 
                 </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/sub_header_view_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/cardview_two_action_View"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="10dp"
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/lato_bold"
+                        android:gravity="center"
+                        android:includeFontPadding="false"
+                        android:text="Use of telemedicine during COVID-19"
+                        android:textColor="@color/txt_sub_header_color"
+                        android:textSize="13sp" />
+
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/lato_bold"
+                        android:gravity="center"
+                        android:includeFontPadding="false"
+                        android:text="Request for PPE kits"
+                        android:textColor="@color/txt_sub_header_color"
+                        android:textSize="13sp" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/cardview_two_action_View_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/sub_header_view_2"
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    >
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardview_button_home_quarantine_2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginHorizontal="5dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="8dp"
+                        app:cardPreventCornerOverlap="false">
+
+                        <RelativeLayout
+                            android:id="@+id/button_home_quarantine_2"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="bottom"
+
+                            >
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:src="@drawable/use_of_telemedicine_covid19"
+                                >
+
+                            </ImageView>
+
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardview_button_educational_videos_2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_weight="1"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="8dp"
+                        app:cardPreventCornerOverlap="true">
+
+                        <RelativeLayout
+                            android:id="@+id/button_educational_videos_2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="bottom">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/ic_welcome_intro_svg"
+                                android:layout_centerHorizontal="true"
+                                />
+
+                        </RelativeLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+
+                </LinearLayout>
+
 
                 <!--<TextView
                     android:id="@+id/welcome"
@@ -424,7 +538,7 @@
                     android:layout_marginHorizontal="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="10dp"
-                    android:layout_below="@+id/cardview_two_action_View"
+                    android:layout_below="@+id/cardview_two_action_View_2"
                     android:text="@string/help"
                     android:textColor="@color/txt_sub_header_color" />
 
