--- a/app/src/main/res/layout/activity_physical_exam.xml
+++ b/app/src/main/res/layout/activity_physical_exam.xml
@@ -78,7 +78,7 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="25dp"
             android:background="@drawable/tab_layout_background"
             android:layout_margin="15dp"
