--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -128,7 +128,8 @@
                             android:layout_width="16dp"
                             android:layout_height="16dp"
                             android:layout_centerInParent="true"
-                            android:src="@drawable/svg_logout">
+                            android:src="@drawable/menu"
+                            android:id="@+id/popup_menu">
 
                         </ImageView>
 
