--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="margin_title_top">30dp</dimen>
+    <dimen name="title_text_size">38dp</dimen>
+    <dimen name="padding_screen">20dp</dimen>
+    <dimen name="margin_between_views">30dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
@@ -9,6 +13,9 @@
     //Main Activity, Home screen
     <dimen name="home_screen_button_height">50dp</dimen>
     <dimen name="home_screen_button_width">50dp</dimen>
+
+    //Language Screen
+    <dimen name="save_button_width">250dp</dimen>
 
     //Identification Screen
     <dimen name="padding_identification_screen">10dp</dimen>
