--- a/app/src/main/res/menu/home_popup_menu.xml
+++ b/app/src/main/res/menu/home_popup_menu.xml
@@ -3,10 +3,10 @@
 
     <item
         android:id="@+id/changeLanguage"
-        android:title="Change Language" />
+        android:title="@string/change_lang_menu" />
     <item
         android:id="@+id/logout"
-        android:title="Logout"/>
+        android:title="@string/logout_menu"/>
 
 
 </menu>
