--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -120,13 +120,14 @@
                         android:id="@+id/user_logout"
                         android:layout_width="32dp"
                         android:layout_height="32dp"
+                        android:padding="10dp"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
                         android:background="@drawable/oval_home_notification">
 
                         <ImageView
-                            android:layout_width="16dp"
-                            android:layout_height="16dp"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
                             android:layout_centerInParent="true"
                             android:src="@drawable/menu"
                             android:id="@+id/popup_menu">
