--- a/app/src/main/res/layout/content_visit_summary.xml
+++ b/app/src/main/res/layout/content_visit_summary.xml
@@ -565,7 +565,6 @@ Github: prajwalmw
                         android:id="@+id/visit_help_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
                         android:fontFamily="@font/lato_regular"
                         android:text="@string/if_you_star"
                         android:layout_below="@id/help_title"
@@ -584,7 +583,6 @@ Github: prajwalmw
                         android:layout_marginStart="10sp"
                         android:fontFamily="@font/lato_bold"
                         android:textColor="@color/txt_sub_header_color"
-                        android:textStyle="bold"
                         android:background="@android:color/transparent"
                         android:drawableStart="@drawable/ic_icons8_whatsapp"
                         android:gravity="start|center"
@@ -640,26 +638,26 @@ Github: prajwalmw
                         android:id="@+id/mental_visit_help_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
+                        android:layout_marginTop="5dp"
                         android:fontFamily="@font/lato_regular"
                         android:text="@string/tele_consultant_text"
                         android:textSize="14sp"
                         android:textColor="@color/txt_sub_header_color"
                         />
 
-                    <Button
+                    <TextView
                         android:id="@+id/tv_mental_help_request"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/mental_visit_help_text"
                         android:layout_marginStart="10sp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:background="@android:color/transparent"
                         android:fontFamily="@font/lato_bold"
                         android:gravity="start|center"
                         android:hint=""
-                        android:textSize="@dimen/text_20sp"
-                        android:textStyle="bold"
+                        android:textSize="18sp"
                         android:text="@string/teleconsult_request"
                         android:textColor="@color/txt_sub_header_color" />
 
