--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -1,59 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="@dimen/padding_screen"
+    android:orientation="vertical"
+    android:background="@color/white"
+    tools:context="org.intelehealth.intelesafe.activities.introActivity.IntroActivity">
 
-    <LinearLayout
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="vertical">
+        android:fontFamily="@font/lato_regular"
+        android:text="@string/intro_title"
+        android:layout_marginTop="@dimen/margin_between_views"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="36dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:text="@string/who_is_this_napplication_for"
-            android:textColor="@color/font_black_0"
-            app:fontFamily="@fonts/Lato-Regular"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/lato_regular"
+        android:text="@string/intro_text"
+        android:layout_marginTop="@dimen/margin_between_views"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="@dimen/intro_text"
+        android:textAlignment="viewStart"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:paddingStart="20dp"
-            android:id="@+id/tv_intro_one"
-            app:fontFamily="@fonts/Lato-Regular"
-            android:paddingEnd="20dp"
-            tools:text="@string/intro_text1"
-            android:textColor="@color/font_black_0"
-            android:textSize="16sp" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginTop="@dimen/margin_between_views"
+        android:src="@drawable/teleconsultation"
+        android:background="@color/transparent"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingStart="20dp"
-            android:id="@+id/tv_intro_two"
-            app:fontFamily="@fonts/Lato-Regular"
-            android:paddingEnd="20dp"
-            tools:text=""
-            android:textColor="@color/font_black_0"
-            android:textSize="16sp" />
+<!--    <LinearLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:layout_gravity="end">-->
 
-        <ImageView
-            android:layout_width="300dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="20dp"
-            android:src="@drawable/ic_intro" />
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/intro_next_button"-->
+<!--            android:text="@string/next"-->
+<!--            android:textColor="@color/colorPrimaryDark"-->
+<!--            android:drawableEnd="@drawable/ic_keyboard_arrow_right"-->
+<!--            android:fontFamily="@font/lato_regular"-->
+<!--            android:textSize="@dimen/intro_button_text"-->
+<!--            android:foreground="?android:attr/selectableItemBackground"-->
+<!--            android:padding="@dimen/arrow_button_padding"/>-->
 
-    </LinearLayout>
-</RelativeLayout>
+<!--    </LinearLayout>-->
+
+</LinearLayout>
