--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,9 +6,21 @@
     <dimen name="margin_between_views">30dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="arrow_button_padding">10dp</dimen>
+    <dimen name="arrow_button_margin">10dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="small_text_size">15sp</dimen>
+    <dimen name="medium_text_size">20sp</dimen>
+    <dimen name="large_text_size">30sp</dimen>
+
+    //Privacy Screen
+    <dimen name="privacy_text">16sp</dimen>
+
+    //Intro Screen
+    <dimen name="intro_text">16sp</dimen>
+    <dimen name="intro_button_text">18sp</dimen>
 
     //Main Activity, Home screen
     <dimen name="home_screen_button_height">50dp</dimen>
