--- a/app/src/main/res/layout-sw600dp/activity_home.xml
+++ b/app/src/main/res/layout-sw600dp/activity_home.xml
@@ -179,7 +179,7 @@
                                 android:layout_marginTop="24dp"
                                 android:fontFamily="@font/lato_bold"
                                 android:includeFontPadding="false"
-                                android:text="@string/txt_doctor_consulation"
+                                android:text="@string/txt_selfCheck"
                                 android:textColor="@color/white"
                                 android:textSize="36sp" />
 
@@ -247,7 +247,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:gravity="center"
                         android:includeFontPadding="false"
-                        android:text="@string/personal_pr"
+                        android:text="@string/covid_home_care"
                         android:textColor="@color/txt_sub_header_color"
                         android:textSize="17sp" />
 
@@ -260,7 +260,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:gravity="center"
                         android:includeFontPadding="false"
-                        android:text="@string/ppe_faq"
+                        android:text="@string/about_covid"
                         android:textColor="@color/txt_sub_header_color"
                         android:textSize="17sp" />
 
@@ -464,7 +464,7 @@
                                 android:layout_marginTop="9dp"
                                 android:fontFamily="@font/lato_regular"
                                 android:includeFontPadding="false"
-                                android:text="@string/if_you_star"
+                                android:text="@string/whatsApp_description"
                                 android:textSize="18sp" />
 
                             <Button
@@ -481,7 +481,7 @@
                                 android:gravity="start|center"
                                 android:hint=""
                                 android:textStyle="bold"
-                                android:text="@string/txt_whatsapp_helpline"
+                                android:text="@string/txt_get_help_now"
                                 android:textColor="@color/txt_sub_header_color"
                                 android:textSize="22sp" />
 
