--- a/app/src/main/res/layout-sw600dp/activity_signup.xml
+++ b/app/src/main/res/layout-sw600dp/activity_signup.xml
@@ -248,7 +248,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:visibility="gone"
                             android:weightSum="2">
 
                             <TextView
@@ -300,6 +299,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="vertical"
+                                    android:visibility="gone"
                                     android:layout_marginTop="5dp">
 
                                     <EditText
@@ -330,6 +330,7 @@
 
                             <com.google.android.material.textfield.TextInputLayout
                                 android:layout_width="match_parent"
+                                android:visibility="gone"
                                 android:layout_height="wrap_content">
 
                                 <EditText
@@ -554,12 +555,13 @@
             </LinearLayout>
                 <Space
                     android:layout_width="20dp"
-                    android:layout_height="20dp" />
+                    android:layout_height="20dp"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:visibility="gone"
                     android:drawableStart="@drawable/icon_address"
                     android:drawableLeft="@drawable/icon_address"
                     android:drawablePadding="10dp"
@@ -569,9 +571,11 @@
 
                 <Space
                     android:layout_width="20dp"
-                    android:layout_height="20dp" />
+                    android:layout_height="20dp"
+                    android:visibility="gone"/>
 
                 <LinearLayout
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/white_rectangular_bg"
