--- a/app/src/main/res/layout/content_visit_summary.xml
+++ b/app/src/main/res/layout/content_visit_summary.xml
@@ -541,6 +541,7 @@ Github: prajwalmw
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:padding="5dp">
 
                 <RelativeLayout
@@ -566,7 +567,7 @@ Github: prajwalmw
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lato_regular"
-                        android:text="@string/if_you_star"
+                        android:text="@string/whatsApp_description"
                         android:layout_below="@id/help_title"
                         android:textSize="14sp"
                         android:textColor="@color/txt_sub_header_color"
@@ -578,7 +579,7 @@ Github: prajwalmw
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/visit_help_text"
-                        android:text="@string/txt_whatsapp_helpline"
+                        android:text="@string/txt_get_help_now"
                         android:textSize="@dimen/text_18sp"
                         android:layout_marginStart="10sp"
                         android:fontFamily="@font/lato_bold"
@@ -611,6 +612,7 @@ Github: prajwalmw
 
 
         <androidx.cardview.widget.CardView
+            android:visibility="gone"
             android:id="@+id/mental_help_cardview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
