--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -210,7 +210,8 @@
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:ems="10"
-                                android:focusable="false"
+                                android:focusable="true"
+                                android:focusableInTouchMode="true"
                                 android:freezesText="true"
                                 android:hint="@string/identification_screen_prompt_birthday"
                                 android:imeOptions="actionUnspecified"
