--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -240,45 +240,57 @@
 
                             </android.support.design.widget.TextInputLayout>-->
 
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:weightSum="2">
+                            android:orientation="horizontal">
 
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:layout_marginTop="5dp"
-                                android:layout_weight="0.2"
-                                android:gravity="center"
-                                android:text="+91"
-                                android:textSize="16sp" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginTop="5dp"
+                                    android:gravity="center"
+                                    android:paddingHorizontal="5dp"
+                                    android:text="+91"
+                                    android:textSize="16sp" />
 
-                            <com.google.android.material.textfield.TextInputLayout
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1.8">
+                                <com.google.android.material.textfield.TextInputLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent">
 
-                                <EditText
-                                    android:id="@+id/identification_phone_number"
-                                    android:layout_width="fill_parent"
-                                    android:layout_height="wrap_content"
-                                    android:digits="0123456789+"
-                                    android:ems="10"
-                                    android:freezesText="true"
-                                    android:hint="@string/identification_screen_prompt_phone_number"
-                                    android:imeOptions="actionUnspecified"
-                                    android:inputType="phone"
-                                    android:maxLength="10"
-                                    android:maxLines="1"
-                                    android:singleLine="true"
-                                    android:tag="@string/tag_optional"
-                                    android:textAppearance="@style/sign_up_input" />
+                                    <EditText
+                                        android:id="@+id/identification_phone_number"
+                                        android:layout_width="fill_parent"
+                                        android:layout_height="wrap_content"
+                                        android:digits="0123456789+"
+                                        android:ems="10"
+                                        android:freezesText="true"
+                                        android:hint="@string/identification_screen_prompt_phone_number"
+                                        android:imeOptions="actionUnspecified"
+                                        android:inputType="phone"
+                                        android:maxLength="10"
+                                        android:maxLines="1"
+                                        android:singleLine="true"
+                                        android:tag="@string/tag_optional"
+                                        android:textAppearance="@style/sign_up_input" />
 
-                            </com.google.android.material.textfield.TextInputLayout>
+                                </com.google.android.material.textfield.TextInputLayout>
                         </LinearLayout>
+
+                            <ImageView
+                                android:id="@+id/image_username_valid"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_gravity="center_vertical|right"
+                                android:layout_marginTop="0dp"
+                                android:layout_marginEnd="12dp"
+                                app:srcCompat="@drawable/svg_valid_icon"/>
+                            </FrameLayout>
+
 
                         <!--
                         <LinearLayout
@@ -401,12 +413,7 @@
 
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="15dp"
-                        android:orientation="vertical">
-
+<!--
                         <FrameLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
@@ -415,7 +422,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
 
-                                <!-- android:textColor="#50000000"-->
+                                &lt;!&ndash; android:textColor="#50000000"&ndash;&gt;
                                 <com.google.android.material.textfield.TextInputEditText
                                     android:id="@+id/email"
                                     android:layout_width="match_parent"
@@ -428,25 +435,18 @@
                                     android:maxLines="1"
                                     android:nextFocusForward="@id/password"
                                     android:textAppearance="@style/sign_up_input" />
-                                <!-- android:maxLines="1"
-                                 android:nextFocusForward="@id/password" />-->
+                                &lt;!&ndash; android:maxLines="1"
+                                 android:nextFocusForward="@id/password" />&ndash;&gt;
 
                             </com.google.android.material.textfield.TextInputLayout>
 
 
-                            <ImageView
-                                android:id="@+id/image_username_valid"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:layout_gravity="center_vertical|right"
-                                android:layout_marginTop="0dp"
-                                android:layout_marginEnd="12dp"
-                                app:srcCompat="@drawable/svg_valid_icon">
 
-                            </ImageView>
                         </FrameLayout>
+-->
 
 
+<!--
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -457,6 +457,31 @@
                             android:textColor="@null"
                             android:translationY="-1sp"
                             android:visibility="visible" />
+-->
+
+                    <LinearLayout
+                        android:id="@+id/login_linearlayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
+                        android:orientation="vertical">
+
+                        <!--OTP No-->
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/otp"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/enter_otp"
+                                android:imeOptions="actionNext"
+                                android:maxLength="4"
+                                android:singleLine="true"
+                                android:textAppearance="@style/sign_up_input" />
+                        </com.google.android.material.textfield.TextInputLayout>
+
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
