UI redesigned for OTP

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -82,6 +82,7 @@
                     android:paddingHorizontal="10dp"
                     android:elevation="40dp"
                     android:orientation="vertical"
+                    android:paddingBottom="10dp"
                     android:background="@drawable/white_rectangular_bg">
 
                     <LinearLayout
@@ -464,7 +465,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="15dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="gone"
+                        tools:visibility="visible">
 
                         <!--OTP No-->
                         <com.google.android.material.textfield.TextInputLayout
@@ -903,7 +906,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     android:background="@drawable/rectangle_7"
-                    android:text="@string/save"
+                    android:text="@string/send_otp"
                     android:textAppearance="@style/sign_up_save" />
 
                 <!--                <android.support.design.widget.TextInputLayout-->
