--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -466,7 +466,6 @@
                         android:layout_height="match_parent"
                         android:layout_marginBottom="15dp"
                         android:orientation="vertical"
-                        android:visibility="gone"
                         tools:visibility="visible">
 
                         <!--OTP No-->
@@ -475,7 +474,7 @@
                             android:layout_height="wrap_content">
 
                             <EditText
-                                android:id="@+id/otp"
+                                android:id="@+id/mOTP"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="@string/enter_otp"
