--- a/app/src/main/res/layout-sw600dp/activity_signup.xml
+++ b/app/src/main/res/layout-sw600dp/activity_signup.xml
@@ -475,7 +475,7 @@
                             android:layout_height="wrap_content">
 
                             <EditText
-                                android:id="@+id/otp"
+                                android:id="@+id/mOTP"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:imeOptions="actionNext"
