--- a/app/src/main/res/layout-sw600dp/activity_home.xml
+++ b/app/src/main/res/layout-sw600dp/activity_home.xml
@@ -38,7 +38,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_marginEnd="5dp"
-                        android:layout_toStartOf="@+id/user_logout"
+                        android:layout_toStartOf="@+id/btn_refresh"
                         android:fontFamily="@font/lato_bold"
                         android:includeFontPadding="false"
                         android:text="@string/prajwal_waingankar"
@@ -133,6 +133,15 @@
                         </ImageView>
 
                     </RelativeLayout>
+
+                    <ImageView
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="8dp"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_toStartOf="@id/user_logout"
+                        android:src="@drawable/ic_sync_black_24dp"
+                        android:id="@+id/btn_refresh"/>
 
                 </RelativeLayout>
 
